--- a/NexuSeguros/src/main/java/com/login/bienvenidaAC.form
+++ b/NexuSeguros/src/main/java/com/login/bienvenidaAC.form
@@ -124,6 +124,9 @@
                 </LineBorder>
               </Border>
             </Property>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
+            </Property>
             <Property name="iconTextGap" type="int" value="10"/>
           </Properties>
           <Events>
@@ -154,6 +157,9 @@
                   <Color PropertyName="color" blue="99" green="99" red="99" type="rgb"/>
                 </LineBorder>
               </Border>
+            </Property>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
             </Property>
             <Property name="iconTextGap" type="int" value="10"/>
           </Properties>
